--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack": "^3.11.0"
   },
   "dependencies": {
+    "axios": "0.18.0",
     "babel-polyfill": "^6.26.0",
     "isomorphic-fetch": "^2.2.1",
     "query-string": "^5.0.1",
@@ -31,6 +32,6 @@
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "axios": "0.18.0"
+    "universal-cookie": "^2.1.2"
   }
 }
