--- a/CVanalizer.csproj
+++ b/CVanalizer.csproj
@@ -5,11 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Content\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Include="wwwroot\css\styles.css" />
+    <None Include="wwwroot\images\1.jpg" />
   </ItemGroup>
 
   <ItemGroup>
