--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux-thunk": "^2.2.0",
     "universal-cookie": "^2.1.2",
     "throttle-debounce": "1.0.1",
-    "react-select": "1.2.1"
+    "react-select": "1.2.1",
+    "react-table": "6.8.0"
   }
 }
